re PR c/88701 (Internal compiler error for valid program using compound literal with variably modified type.)

PR c/88701
	* c-decl.c (build_compound_literal): If not TREE_STATIC, only pushdecl
	if current_function_decl is non-NULL.

	* gcc.dg/pr88701.c: New test.

From-SVN: r267667